Funcons-beta/Computations/Abnormal/Failing/tests/check-true.config
general {
    funcon-term: 
      finalise-failing
      sequential(
        check-true(true), print 1,
        else(check-true(false), print 2),
        check-true(not false), print 3,
        print sequential(check-true(true),4)
      )
        ;
}

tests {
    result-term: null-value;
    standard-out: [1, 2, 3, 4];
}
